--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Javascript </title>
 </head>
 <body>
-    <!-- <script src="02.js"></script> -->
-    <script src="03.js"></script>
+    <!-- <script src="declare-variable-using-var.js"></script> -->
+    <!-- <script src="rules-of-using-var-and-more.js"></script>-->
+     <script src="let.js"></script>  
+     <script src="const.js"></script>  
     
 </body>
 </html>
