--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <!-- <script src="declare-variable-using-var.js"></script> -->
     <!-- <script src="rules-of-using-var-and-more.js"></script>-->
-     <script src="let.js"></script>  
-     <script src="const.js"></script>  
+     <!-- <script src="let.js"></script>   -->
+     <!-- <script src="const.js"></script>   -->
+     <script src="string-indexing.js"></script>  
     
 </body>
 </html>
