Useful string Method

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- <script src="rules-of-using-var-and-more.js"></script>-->
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
-     <script src="string-indexing.js"></script>  
+     <!-- <script src="string-indexing.js"></script>   -->
+     <script src="useful-string-method.js"></script>  
+     <script src="null-undefined-BigInt-typeof"></script>  
     
 </body>
 </html>
