Convert String into number and number into string

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
      <!-- <script src="string-indexing.js"></script>   -->
-     <script src="useful-string-method.js"></script>  
-     <script src="null-undefined-BigInt-typeof"></script>  
+     <!-- <script src="useful-string-method.js"></script>   -->
+     <!-- <script src="convert-number-into-string-and-string-into-number.js"></script>   -->
+     <script src="string-concatenation.js"></script>  
     
 </body>
 </html>
