--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
      <!-- <script src="const.js"></script>   -->
      <!-- <script src="string-indexing.js"></script>   -->
      <!-- <script src="useful-string-method.js"></script>   -->
-     <!-- <script src="convert-number-into-string-and-string-into-number.js"></script>   -->
-     <script src="string-concatenation.js"></script>  
+     <!-- <script src="typeof-string-to-number-number-to-string-conversion.js"></script>   -->
+     <!-- <script src="string-concatenation.js"></script>   -->
+     <!-- <script src="template-string.js"></script>   -->
     
 </body>
 </html>
