--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
      <!-- <script src="typeof-string-to-number-number-to-string-conversion.js"></script>   -->
      <!-- <script src="string-concatenation.js"></script>   -->
      <!-- <script src="template-string.js"></script>   -->
-     <script src="undefined-null-bigint.js"></script>  
+     <!-- <script src="undefined-null-bigint.js"></script>   -->
+     <!-- <script src="Boolean-and-Comparison-Operators.js"></script>   -->
+     <!-- <script src="if-else-truthy-and-falsy-values.js"></script>   -->
+     <!-- <script src="if-else-condition.js"></script>   -->
     
 </body>
 </html>
