--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      <!-- <script src="Boolean-and-Comparison-Operators.js"></script>   -->
      <!-- <script src="if-else-truthy-and-falsy-values.js"></script>   -->
      <!-- <script src="if-else-condition.js"></script>   -->
+     <script src="Ternary-Operator.js"></script>  
     
 </body>
 </html>
