--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
      <!-- <script src="if-else-truthy-and-falsy-values.js"></script>   -->
      <!-- <script src="if-else-condition.js"></script>   -->
      <!-- <script src="Ternary-Operator.js"></script>   -->
-     <script src="and-or-operator.js"></script>  
+     <!-- <script src="and-or-operator.js"></script>   -->
+     <script src="nested-if-else.js"></script>  
     
 </body>
 </html>
