--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
      <!-- <script src="Ternary-Operator.js"></script>   -->
      <!-- <script src="and-or-operator.js"></script>   -->
      <!-- <script src="nested-if-else.js"></script>   -->
-     <script src="if-elseif.js"></script>
+     <!-- <script src="if-elseif.js"></script> -->
+     <script src="switch-statement.js"></script>
     
 </body>
 </html>
