--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="declare-variable-using-var.js"></script> -->
-    <!-- <script src="rules-of-using-var-and-more.js"></script> -->
+    <script src="rules-of-using-var-and-more.js"></script>
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
      <!-- <script src="string-indexing.js"></script>   -->
@@ -24,7 +24,7 @@
      <!-- <script src="and-or-operator.js"></script>   -->
      <!-- <script src="nested-if-else.js"></script>   -->
      <!-- <script src="if-elseif.js"></script> -->
-     <script src="switch-statement.js"></script>
+     <!-- <script src="switch-statement.js"></script> -->
     
 </body>
 </html>
