--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="declare-variable-using-var.js"></script> -->
-    <script src="rules-of-using-var-and-more.js"></script>
+    <!-- <script src="rules-of-using-var-and-more.js"></script> -->
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
      <!-- <script src="string-indexing.js"></script>   -->
@@ -25,6 +25,7 @@
      <!-- <script src="nested-if-else.js"></script>   -->
      <!-- <script src="if-elseif.js"></script> -->
      <!-- <script src="switch-statement.js"></script> -->
+     <script src="while-loop.js"></script>
     
 </body>
 </html>
