--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
      <!-- <script src="nested-if-else.js"></script>   -->
      <!-- <script src="if-elseif.js"></script> -->
      <!-- <script src="switch-statement.js"></script> -->
-     <script src="while-loop.js"></script>
+     <!-- <script src="while-loop.js"></script> -->
+     <script src="while-loop-example.js"></script>
     
 </body>
 </html>
