--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
      <!-- <script src="if-elseif.js"></script> -->
      <!-- <script src="switch-statement.js"></script> -->
      <!-- <script src="while-loop.js"></script> -->
-     <script src="while-loop-example.js"></script>
+     <!-- <script src="while-loop-example.js"></script> -->
+     <!-- <script src="for-loop.js"></script> -->
     
 </body>
 </html>
