Basic Of Programming In Javascript

--- a/Basics of Programming in JavaScript/index.html
+++ b/Basics of Programming in JavaScript/index.html
@@ -7,7 +7,7 @@
     <title>Javascript </title>
 </head>
 <body>
-    <!-- <script src="declare-variable-using-var.js"></script> -->
+    <script src="declare-variable-using-var.js"></script>
     <!-- <script src="rules-of-using-var-and-more.js"></script> -->
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
@@ -28,6 +28,9 @@
      <!-- <script src="while-loop.js"></script> -->
      <!-- <script src="while-loop-example.js"></script> -->
      <!-- <script src="for-loop.js"></script> -->
+     <!-- <script src="for-loop-example.js"></script> -->
+     <!-- <script src="break-and-continue-keyword.js"></script> -->
+     <!-- <script src="do-while-loop.js"></script> -->
     
 </body>
 </html>
