Array Primitive vs refrence type and clone array concat spread operator

--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- <script src="intro-to-array.js"></script> -->
-    <script src="push-pop-shift-unshift.js"></script>
+    <!-- <script src="push-pop-shift-unshift.js"></script> -->
+    <!-- <script src="Primitive-vs-reference-data-types.js"></script> -->
+    <script src="clone-array-concat-spread-operator.js"></script>
 </body>
 </html>
