--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="intro-to-array.js"></script> -->
     <!-- <script src="push-pop-shift-unshift.js"></script> -->
     <!-- <script src="Primitive-vs-reference-data-types.js"></script> -->
-    <script src="clone-array-concat-spread-operator.js"></script>
+    <!-- <script src="clone-array-concat-spread-operator.js"></script> -->
+    <script src="for-loop-in-array.js"></script>
 </body>
 </html>
