Use Const For Creating Arrays

--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -11,6 +11,8 @@
     <!-- <script src="push-pop-shift-unshift.js"></script> -->
     <!-- <script src="Primitive-vs-reference-data-types.js"></script> -->
     <!-- <script src="clone-array-concat-spread-operator.js"></script> -->
-    <script src="for-loop-in-array.js"></script>
+    <!-- <script src="for-loop-in-array.js"></script> -->
+    <!-- <script src="use-const-for-creating-arrays.js"></script> -->
+    <script src="while-loop-in-array.js"></script>
 </body>
 </html>
