For Of Loop In Array

--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="clone-array-concat-spread-operator.js"></script> -->
     <!-- <script src="for-loop-in-array.js"></script> -->
     <!-- <script src="use-const-for-creating-arrays.js"></script> -->
-    <script src="while-loop-in-array.js"></script>
+    <!-- <script src="while-loop-in-array.js"></script> -->
+    <script src="for-of-loop-in-array.js"></script>
 </body>
 </html>
