--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="use-const-for-creating-arrays.js"></script> -->
     <!-- <script src="while-loop-in-array.js"></script> -->
     <!-- <script src="for-of-loop-in-array.js"></script> -->
-    <script src="for-in-loop-in-array.js"></script>
+    <!-- <script src="for-in-loop-in-array.js"></script> -->
+    <script src="array-destructuring.js"></script>
 </body>
 </html>
