--- a/Arrays in JavaScript/index.html
+++ b/Arrays in JavaScript/index.html
@@ -16,6 +16,6 @@
     <!-- <script src="while-loop-in-array.js"></script> -->
     <!-- <script src="for-of-loop-in-array.js"></script> -->
     <!-- <script src="for-in-loop-in-array.js"></script> -->
-    <script src="array-destructuring.js"></script>
+    <!-- <script src="array-destructuring.js"></script> -->
 </body>
 </html>
