--- a/Objects In Javascript/index.html
+++ b/Objects In Javascript/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <!-- <script src="intro-to-object.js"></script> -->
-    <script src="Dot-vs-bracket-notation.js"></script>
-    
+    <!-- <script src="Dot-vs-bracket-notation.js"></script> -->
+    <!-- <script src="iterate-objects.js"></script> -->
+
 </body>
 </html>
