--- a/Objects In Javascript/index.html
+++ b/Objects In Javascript/index.html
@@ -9,7 +9,8 @@
 <body>
     <!-- <script src="intro-to-object.js"></script> -->
     <!-- <script src="Dot-vs-bracket-notation.js"></script> -->
-    <script src="iterate-objects.js"></script>
+    <!-- <script src="iterate-objects.js"></script> -->
+    <script src="computed-properties.js"></script>
 
 </body>
 </html>
