--- a/Objects In Javascript/index.html
+++ b/Objects In Javascript/index.html
@@ -10,7 +10,10 @@
     <!-- <script src="intro-to-object.js"></script> -->
     <!-- <script src="Dot-vs-bracket-notation.js"></script> -->
     <!-- <script src="iterate-objects.js"></script> -->
-    <script src="computed-properties.js"></script>
+    <!-- <script src="computed-properties.js"></script> -->
+    <!-- <script src="spread-operator.js"></script> -->
+    <!-- <script src="object-destructure.js"></script> -->
+    <script src="object-inside-array.js"></script>
 
 </body>
 </html>
