Till Here we have done Basic In programming OF Javascript, Arrays In Javascript objects In Javascript

--- a/Objects In Javascript/index.html
+++ b/Objects In Javascript/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="computed-properties.js"></script> -->
     <!-- <script src="spread-operator.js"></script> -->
     <!-- <script src="object-destructure.js"></script> -->
-    <script src="object-inside-array.js"></script>
+    <!-- <script src="object-inside-array.js"></script> -->
+    <script src="nested-destructing.js"></script>
 
 </body>
 </html>
