--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="function-declaration.js"></script> -->
     <!-- <script src="function-expression.js"></script> -->
     <!-- <script src="arrow-function.js"></script> -->
-    <script src="hoisting-intro.js"></script>
+    <!-- <script src="hoisting-intro.js"></script> -->
+    <script src="Function-inside-function.js"></script>
 </body>
 </html>
