--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -11,6 +11,8 @@
     <!-- <script src="function-expression.js"></script> -->
     <!-- <script src="arrow-function.js"></script> -->
     <!-- <script src="hoisting-intro.js"></script> -->
-    <script src="Function-inside-function.js"></script>
+    <!-- <script src="Function-inside-function.js"></script> -->
+    <!-- <script src="lexical-scope.js"></script> -->
+    <script src="lexical-scope.js"></script>
 </body>
 </html>
