--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="hoisting-intro.js"></script> -->
     <!-- <script src="Function-inside-function.js"></script> -->
     <!-- <script src="lexical-scope.js"></script> -->
-    <script src="block-scope-vs-function-scope.js"></script>
+    <!-- <script src="block-scope-vs-function-scope.js"></script> -->
+    <script src="default-parameter.js"></script>
 </body>
 </html>
