--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="lexical-scope.js"></script> -->
     <!-- <script src="block-scope-vs-function-scope.js"></script> -->
     <!-- <script src="default-parameter.js"></script> -->
-    <script src="rest-parameter.js"></script>
+    <!-- <script src="rest-parameter.js"></script> -->
+    <script src="parameter-destructuring.js"></script>
 </body>
 </html>
