Call Back FUnciton

--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="block-scope-vs-function-scope.js"></script> -->
     <!-- <script src="default-parameter.js"></script> -->
     <!-- <script src="rest-parameter.js"></script> -->
-    <script src="parameter-destructuring.js"></script>
+    <!-- <script src="parameter-destructuring.js"></script> -->
+    <script src="callback-function.js"></script>
 </body>
 </html>
