--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="default-parameter.js"></script> -->
     <!-- <script src="rest-parameter.js"></script> -->
     <!-- <script src="parameter-destructuring.js"></script> -->
-    <script src="callback-function.js"></script>
+    <!-- <script src="callback-function.js"></script> -->
+    <script src="function-returning-function.js"></script>
 </body>
 </html>
