--- a/Functions in JavaScript/index.html
+++ b/Functions in JavaScript/index.html
@@ -18,6 +18,6 @@
     <!-- <script src="rest-parameter.js"></script> -->
     <!-- <script src="parameter-destructuring.js"></script> -->
     <!-- <script src="callback-function.js"></script> -->
-    <script src="function-returning-function.js"></script>
+    <!-- <script src="function-returning-function.js"></script> -->
 </body>
 </html>
