--- a/Very Important Array Method/index.html
+++ b/Very Important Array Method/index.html
@@ -7,6 +7,8 @@
         <title>Very Important Array Method</title>
     </head>
     <body>
-        <script src="foreach-method.js"></script>
+        <!-- <script src="foreach-method.js"></script> -->
+        <!-- <script src="map-method.js"></script> -->
+        <script src="filter-method.js"></script>
     </body>
 </html>
