--- a/Very Important Array Method/index.html
+++ b/Very Important Array Method/index.html
@@ -9,6 +9,7 @@
     <body>
         <!-- <script src="foreach-method.js"></script> -->
         <!-- <script src="map-method.js"></script> -->
-        <script src="filter-method.js"></script>
+        <!-- <script src="filter-method.js"></script> -->
+        <script src="reduce-method.js"></script>
     </body>
 </html>
