--- a/Very Important Array Method/index.html
+++ b/Very Important Array Method/index.html
@@ -10,6 +10,7 @@
         <!-- <script src="foreach-method.js"></script> -->
         <!-- <script src="map-method.js"></script> -->
         <!-- <script src="filter-method.js"></script> -->
-        <script src="reduce-method.js"></script>
+        <!-- <script src="reduce-method.js"></script> -->
+        <script src="sort-method.js"></script>
     </body>
 </html>
