--- a/Very Important Array Method/index.html
+++ b/Very Important Array Method/index.html
@@ -13,6 +13,7 @@
         <!-- <script src="reduce-method.js"></script> -->
         <!-- <script src="sort-method.js"></script> -->
         <!-- <script src="find-method.js"></script> -->
-        <script src="every-method.js"></script>
+        <!-- <script src="every-method.js"></script> -->
+        <script src="some-method.js"></script>
     </body>
 </html>
