--- a/Very Important Array Method/index.html
+++ b/Very Important Array Method/index.html
@@ -15,6 +15,7 @@
         <!-- <script src="find-method.js"></script> -->
         <!-- <script src="every-method.js"></script> -->
         <!-- <script src="some-method.js"></script> -->
-        <script src="fill-method.js"></script>
+        <!-- <script src="fill-method.js"></script> -->
+        <script src="splice-method.js"></script>
     </body>
 </html>
