--- a/More Useful Things/index.html
+++ b/More Useful Things/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>More Useful Things In JavaScirpt</h1>
     <!-- <script src="iterable.js"></script> -->
-    <script src="sets.js"></script>
+    <!-- <script src="sets.js"></script> -->
+    <script src="map-data-structure.js"></script>
 </body>
 </html>
