--- a/More Useful Things/index.html
+++ b/More Useful Things/index.html
@@ -10,6 +10,6 @@
     <h1>More Useful Things In JavaScirpt</h1>
     <!-- <script src="iterable.js"></script> -->
     <!-- <script src="sets.js"></script> -->
-    <script src="map-data-structure.js"></script>
+    <!-- <script src="map-data-structure.js"></script> -->
 </body>
 </html>
