--- a/Basics of Programming in JavaScript/index.html
+++ b/Basics of Programming in JavaScript/index.html
@@ -7,7 +7,7 @@
     <title>Basic Of Programming In Javascript</title>
 </head>
 <body>
-    <script src="declare-variable-using-var.js"></script>
+    <!-- <script src="declare-variable-using-var.js"></script> -->
     <!-- <script src="rules-of-using-var-and-more.js"></script> -->
      <!-- <script src="let.js"></script>   -->
      <!-- <script src="const.js"></script>   -->
@@ -22,7 +22,7 @@
      <!-- <script src="if-else-condition.js"></script>   -->
      <!-- <script src="Ternary-Operator.js"></script>   -->
      <!-- <script src="and-or-operator.js"></script>   -->
-     <!-- <script src="nested-if-else.js"></script>   -->
+     <script src="nested-if-else.js"></script>  
      <!-- <script src="if-elseif.js"></script> -->
      <!-- <script src="switch-statement.js"></script> -->
      <!-- <script src="while-loop.js"></script> -->
