--- a/More Useful Things/index.html
+++ b/More Useful Things/index.html
@@ -10,6 +10,8 @@
     <h1>More Useful Things In JavaScirpt</h1>
     <!-- <script src="iterable.js"></script> -->
     <!-- <script src="sets.js"></script> -->
-    <script src="map-data-structure.js"></script>
+    <!-- <script src="map-data-structure.js"></script> -->
+    <!-- <script src="clone-using-object-assign.js"></script> -->
+    <script src="optional-chaining.js"></script>
 </body>
 </html>
