--- a/Basics of Programming in JavaScript/index.html
+++ b/Basics of Programming in JavaScript/index.html
@@ -22,7 +22,7 @@
      <!-- <script src="if-else-condition.js"></script>   -->
      <!-- <script src="Ternary-Operator.js"></script>   -->
      <!-- <script src="and-or-operator.js"></script>   -->
-     <script src="nested-if-else.js"></script>  
+     <!-- <script src="nested-if-else.js"></script>   -->
      <!-- <script src="if-elseif.js"></script> -->
      <!-- <script src="switch-statement.js"></script> -->
      <!-- <script src="while-loop.js"></script> -->
