This, Call Apply Bind Method

--- a/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
+++ b/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
@@ -7,8 +7,11 @@
     <title>Object Oriented JavaScript  Prototypal Inheritance</title>
 </head>
 <body>
-    
-    <script src="method.js"></script>
+
+    <!-- <script src="method.js"></script> -->
+    <!-- <script src="this.js"></script> -->
+    <!-- <script src="Call-apply-and-bind-method.js"></script> -->
+    <script src="Call-apply-and-bind-method.js"></script>
     
 </body>
 </html>
