this inside Arrow function

--- a/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
+++ b/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="method.js"></script> -->
     <!-- <script src="this.js"></script> -->
     <!-- <script src="Call-apply-and-bind-method.js"></script> -->
-    <script src="small-warning.js"></script>
+    <!-- <script src="small-warning.js"></script> -->
+    <script src="this-inside-arrow-function.js"></script>
     
 </body>
 </html>
