--- a/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
+++ b/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
@@ -13,7 +13,9 @@
     <!-- <script src="Call-apply-and-bind-method.js"></script> -->
     <!-- <script src="small-warning.js"></script> -->
     <!-- <script src="this-inside-arrow-function.js"></script> -->
-    <script src="short-syntax-for-methods.js"></script>
+    <!-- <script src="short-syntax-for-methods.js"></script> -->
+    <!-- <script src="create-functions-to-create-multiple-objects.js"></script> -->
+    <script src="create-functions-to-create-multiple-objects.js"></script>
     
 </body>
 </html>
