Weekness In code And make Code Optimized

--- a/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
+++ b/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
@@ -15,7 +15,7 @@
     <!-- <script src="this-inside-arrow-function.js"></script> -->
     <!-- <script src="short-syntax-for-methods.js"></script> -->
     <!-- <script src="create-functions-to-create-multiple-objects.js"></script> -->
-    <script src="create-functions-to-create-multiple-objects.js"></script>
+    <script src="weekness-in-code.js"></script>
     
 </body>
 </html>
