Set Value In __proto__

--- a/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
+++ b/Object-Oriented-JavaScript-Prototypal-Inheritance/index.html
@@ -15,7 +15,9 @@
     <!-- <script src="this-inside-arrow-function.js"></script> -->
     <!-- <script src="short-syntax-for-methods.js"></script> -->
     <!-- <script src="create-functions-to-create-multiple-objects.js"></script> -->
-    <script src="weekness-in-code.js"></script>
+    <!-- <script src="weekness-in-code.js"></script> -->
+    <!-- <script src="solution-using-object.create.js"></script> -->
+    <script src="mixture-of-weekness-in-code-and-solution-using-object.create-and-solve-problem.js"></script>
     
 </body>
 </html>
